// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button should render correctly 1`] = `
<styled.button
  iconPosition="before"
  size="small"
  type="button"
  variant="primary"
>
  <styled.p
    variant="copy"
  />
</styled.button>
`;

exports[`Button Secondary Button should render correctly 1`] = `
<styled.button
  iconPosition="before"
  size="small"
  type="button"
  variant="secondary"
>
  <styled.p
    variant="copy"
  />
</styled.button>
`;
